--- a/src/components/DayNight/DayNight.css
+++ b/src/components/DayNight/DayNight.css
@@ -1,5 +1,6 @@
 .DayNight{
   border-radius: 50%;
+  /* overflow: hidden; */
 }
 
 .DayNight-day{
@@ -8,7 +9,7 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .DayNight:hover{
