--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* transition: all 150ms linear; */
   overflow: hidden;
 }
 
@@ -17,12 +16,11 @@
   text-decoration: none;
   font-size: 30px;
   font-family: neon, Arial, Helvetica, sans-serif;
-  transition: all 1s linear;
+  transition: color 1s linear;
 }
 
 .Logo-night{
   color: white;
-
 }
 
 @media screen and (min-width: 705px){
