--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,26 +1,27 @@
-.Nav{
+.Nav {
+  /* overflow: hidden; */
 }
 
-.Nav-slide{
+.Nav-slide {
   transform: translateX();
 }
 
-.Nav li{
+.Nav li {
   border: 1px black solid;
-  padding: .6em .3em .5em .3em;
+  padding: 0.6em 0.3em 0.5em 0.3em;
   background-color: white;
   font-family: neon, sans-serif, Arial;
   font-size: 20px;
   color: black;
 }
 
-.Nav li:hover{
+.Nav li:hover {
   cursor: pointer;
 }
 
-.Nav ul{
+.Nav ul {
   margin: 5px 0;
-  overflow: visible;
+  /* overflow: visible; */
 }
 
 .menu-icon {
@@ -30,7 +31,7 @@
   transition: transform 500ms linear;
 }
 
-.menu-icon:hover{
+.menu-icon:hover {
   cursor: pointer;
 }
 
@@ -40,54 +41,55 @@
   height: 1px;
   width: 30px;
   background-color: black;
-  border: .5px solid black;
+  border: 0.5px solid black;
   border-radius: 20px;
-  transition: 1s linear background-color, 1s linear border-color;
 }
 
-.menu-icon-night{
+.menu-icon-night {
   background-color: white;
   border-color: white;
-  transition: 1s linear background-color, 1s linear border-color;
 }
 
 .menu-icon-top {
   bottom: 19px;
   transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
-    transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    transform 300ms cubic-bezier(0.23, 1, 0.32, 1), 1s linear background-color,
+    1s linear border-color;
 }
 
 .menu-icon .menu-icon-top-expanded {
   bottom: 14px;
   transform: rotate(-45deg);
   transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1),
-    transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+    1s linear background-color, 1s linear border-color;
 }
 
 .menu-icon-bottom {
   bottom: 9px;
   transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
-    transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    transform 300ms cubic-bezier(0.23, 1, 0.32, 1), 1s linear background-color,
+    1s linear border-color;
 }
 .menu-icon .menu-icon-bottom-expanded {
   bottom: 14px;
   transform: rotate(45deg);
   transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1),
-    transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+    1s linear background-color, 1s linear border-color;
 }
 
-@media screen and (min-width: 600px){
-  .Nav li{
+@media screen and (min-width: 600px) {
+  .Nav li {
     font-size: 25px;
   }
 
-  .Nav{
+  .Nav {
   }
 }
 
-@media screen and (min-width: 1200px){
-  .Nav li{
+@media screen and (min-width: 1200px) {
+  .Nav li {
     font-size: 30px;
   }
 }
-
