--- a/src/components/NavMobile/NavMobile.css
+++ b/src/components/NavMobile/NavMobile.css
@@ -1,5 +1,6 @@
 .NavMobile{
   /* overflow: hidden; */
+  /* position: relative; */
 }
 
 .NavMobile-ul-hidden {
@@ -7,7 +8,7 @@
   left: 110%;
   display: flex;
   justify-content: space-around;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 .NavMobile-ul-visible {
